# linux_experiments

./: .gitignore  LICENSE  README.md  _manifest__vcpkg.json  out
asio/first/: .gitignore  CMakeLists.txt  lin_build.sh  win_build.cmd
asio/first/src/: main.cpp
asio_first/: .gitignore  win_build.cmd
messager/: CMakeLists.txt  run_server_win.cmd  run_test_client_win.cmd
messager/client/: CMakeLists.txt
messager/client/src/: client.cpp  client_main.cpp  main.cpp
messager/common/: CMakeLists.txt
messager/common/include/common/: message.h
messager/common/src/common/: message.cpp
messager/common/test/: CMakeLists.txt  messageTest.cpp
messager/server/: CMakeLists.txt
messager/server/include/: cServer.h  cSession.h
messager/server/src/: cServer.cpp  cSession.cpp  main.cpp  server.cpp  server_main.cpp
misc/: CMakeLists.txt  lin_build.sh  win_build.cmd
misc/src/: coroutines.cpp  fsm.cpp  main.cpp  parallelsSTL.cpp  threadQueue.cpp
shared/: CMakeLists.txt
shared/include/sharedLib/: logger.h  runOptions.h
shared/src/sharedLib/: logger.cpp  runOptions.cpp
shared/test/: CMakeLists.txt  runOptionsTest.cpp
